--- a/drawable/pom.properties
+++ b/drawable/pom.properties
@@ -1,7 +1,7 @@
 POM_GROUP_ID=io.github.alexmofer.drawable
 POM_ARTIFACT_ID=drawable
 POM_PACKAGING=aar
-
+POM_VERSION=2.1.0
 POM_NAME=Drawable
 POM_DESCRIPTION=Android Drawables.
 POM_URL=https://github.com/AlexMofer/Drawable
